...

            Button(
                onClick = {}, colors = ButtonDefaults.buttonColors(
                    containerColor = Color.Black
                ), modifier = Modifier.padding(horizontal = 10.dp)
            ) {
                Text("Login")
            }

            Button(
                onClick = {}, colors = ButtonDefaults.buttonColors(
                    containerColor = Color.Black
                ), modifier = Modifier.padding(horizontal = 10.dp)
...
